--- a/PersonalDiary.Domain/PersonalDiary.Domain.csproj
+++ b/PersonalDiary.Domain/PersonalDiary.Domain.csproj
@@ -40,7 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Address.cs" />
-    <Compile Include="GenericUnitOfWork.cs" />
+    <Compile Include="Enums\Enums.cs" />
+    <Compile Include="IGenericUnitOfWork.cs" />
     <Compile Include="IDbEntity.cs" />
     <Compile Include="IGnericRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
