--- a/PersonalDiary.Domain/PersonalDiary.Domain.csproj
+++ b/PersonalDiary.Domain/PersonalDiary.Domain.csproj
@@ -39,13 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Address.cs" />
+    <Compile Include="Models\Address.cs" />
     <Compile Include="Enums\Enums.cs" />
-    <Compile Include="IGenericUnitOfWork.cs" />
-    <Compile Include="IDbEntity.cs" />
-    <Compile Include="IGnericRepository.cs" />
+    <Compile Include="Interfaces\IGenericUnitOfWork.cs" />
+    <Compile Include="Interfaces\IDbEntity.cs" />
+    <Compile Include="Interfaces\IGenericRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserInfo.cs" />
+    <Compile Include="Models\UserInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
