Added new table named 'Notification'

--- a/jQueryFundamentalsUI/jQueryFundamentalsUI.csproj
+++ b/jQueryFundamentalsUI/jQueryFundamentalsUI.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Controllers\BootstrapHomeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\PersonalDiaryHomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -271,6 +272,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\PersonalDiaryHome\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
