--- a/PersonalDiary.Domain/PersonalDiary.Domain.csproj
+++ b/PersonalDiary.Domain/PersonalDiary.Domain.csproj
@@ -44,6 +44,8 @@
     <Compile Include="Interfaces\IGenericUnitOfWork.cs" />
     <Compile Include="Interfaces\IDbEntity.cs" />
     <Compile Include="Interfaces\IGenericRepository.cs" />
+    <Compile Include="Models\Notification.cs" />
+    <Compile Include="Models\Reminder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\UserInfo.cs" />
   </ItemGroup>
