Added structured map mvc3

--- a/PersonalDiary.Domain/PersonalDiary.Domain.csproj
+++ b/PersonalDiary.Domain/PersonalDiary.Domain.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Enums\Enums.cs" />
     <Compile Include="Interfaces\IGenericUnitOfWork.cs" />
@@ -48,6 +49,9 @@
     <Compile Include="Models\Reminder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\UserInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Extensions\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
